k8-specifications/country-airspace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: country-airspace-deployment
  labels:
    app: country-airspace
spec:
  selector:
    matchLabels:
      app: country-airspace
  replicas: 1
  template:
    metadata:
      labels:
        app: country-airspace
    spec:
      containers:
      - name: country-airspace-container
        args:
          - gunicorn
          - -b 0.0.0.0:5001
          - country-airspace:app
          - --worker-class=gevent 
          - --worker-connections=1000
          - --workers=1
          - --threads=10
          - --timeout=90
          - --log-level=debug
        image: okhasim/avi-api-image
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5001
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 128Mi
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: country-airspace-service
  labels:
    app: country-airspace
spec:
  ports:
  - name: http
    # protocol: TCP
    port: 5001
    # targetPort: 5001
  selector:
    app: country-airspace
  # type: LoadBalancer
