k8-specifications/flight-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-tracker-deployment
  labels:
    app: flight-tracker
spec:
  selector:
    matchLabels:
      app: flight-tracker
  replicas: 1
  template:
    metadata:
      labels:
        app: flight-tracker
    spec:
      containers:
      - name: flight-tracker-container
        args:
          - gunicorn
          - -b 0.0.0.0:5002
          - flight-tracker:app
          - --worker-class=gevent 
          - --worker-connections=1000 
          - --workers=1
          - --threads=10
          - --timeout=90
          - --log-level=debug
        image: okhasim/avi-api-image
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5002
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 128Mi
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: flight-tracker-service
  labels:
    app: flight-tracker
spec:
  ports:
  - name: http
    # protocol: TCP
    port: 5002
    # targetPort: 5002
  selector:
    app: flight-tracker
  # type: LoadBalancer
